# QA-chatbot

./: .gitignore  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
langchain basic/: 1langchain.ipynb  qachatbot.py  test.ipynb
