[project]
name = "generative-ai-practice"
version = "0.1.0"
description = [
    "streamlit>=1.46.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.0",
    "python-dotenv>=1.1.1",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langgraph>=1.2.6",
]
